Added menu index

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -8,6 +8,6 @@
     <li th:each="category : ${categories}" th:text="${category.name}" ></li>
   </ul>
 
-  <a href="/category/add">Add Category</a>
+  <a th:href="@{/category/add}">Add Category</a>
 </body>
 </html>
