--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -3,15 +3,14 @@
   <head th:replace="fragments :: head"></head>
   <body class="container">
     <h1 th:text="${title}">Default Title</h1>
+
     <nav th:replace="fragments :: navigation"></nav>
 
     <ul>
-      <li th:each="menu : ${menus}">
-        <a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
-      </li>
+      <li th:each="cheese : ${menu.cheeses}" th:text="${cheese.name}"></li>
     </ul>
 
-    <a th:href="@{/menu/add}">Add Menu</a>
+    <p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
 
-  </body>
+</body>
 </html>
