--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -28,5 +28,10 @@
 
 </table>
 
+<nav th:fragment="navigation">
+  <a href="/cheese/add">Add</a> |
+  <a href="/cheese/remove">Remove</a>
+</nav>
+
 </body>
 </html>
