--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
 <body class="container">
-
 <h1 th:text="${title}">Default Title</h1>
-
 <nav th:replace="fragments :: navigation"></nav>
+<br />
 
-<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
-
-
-<table class="table">
-
+<h3 th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</h3>
+<table th:if="${cheeses.size()}" class="table">
   <tr>
     <th>Name</th>
     <th>Description</th>
     <th>Category</th>
   </tr>
-
   <tr th:each="cheese : ${cheeses}">
     <td th:text="${cheese.name}"></td>
     <td th:text="${cheese.description}"></td>
     <td><a th:href="@{/cheese/category(id=${cheese.category.id})}"
            th:text="${cheese.category.name}"></a></td>
   </tr>
-
 </table>
 
 <nav th:fragment="navigation">
