--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,5 +16,19 @@
   <a href="/menu">Menus</a>
 </nav>
 
+<table th:fragment="cheeseTable" class="table">
+  <tr>
+    <th>Name</th>
+    <th>Description</th>
+    <th>Category</th>
+  </tr>
+  <tr th:each="cheese : ${cheeses}">
+    <td th:text="${cheese.name}"></td>
+    <td th:text="${cheese.description}"></td>
+    <td><a th:href="@{/cheese/category(id=${cheese.category.id})}"
+           th:text="${cheese.category.name}"></a></td>
+  </tr>
+</table>
+
 </body>
 </html>
